--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,7 @@ security:
             pattern: ^/api
             stateless: true
             jwt: ~
+
         main:
             lazy: true
             provider: app_user_provider
@@ -44,6 +45,8 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/api/login, roles: PUBLIC_ACCESS }
+         - { path: ^/api/user/info, roles: IS_AUTHENTICATED_FULLY }
+         - { path: ^/api, roles: PUBLIC_ACCESS, methods: [ OPTIONS ] }
 
 when@test:
     security:
