--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,14 +20,18 @@ security:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
         api:
             pattern: ^/api
             stateless: true
             jwt: ~
 
+
         main:
             lazy: true
             provider: app_user_provider
+            logout:
+                path: api_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -47,6 +51,7 @@ security:
          - { path: ^/api/login, roles: PUBLIC_ACCESS }
          - { path: ^/api/user/info, roles: IS_AUTHENTICATED_FULLY }
          - { path: ^/api, roles: PUBLIC_ACCESS, methods: [ OPTIONS ] }
+         - { path: ^/api/logout, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
